[SBE] Segmentation fault in jstests/noPassthrough/currentop_active_cursor.js

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 4.9.0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Fully Compatible
    • ALL
    • Hide

      buildscripts/resmoke.py --suites=no_passthrough --mongodSetParameters='{featureFlagSBE: true}' jstests/noPassthrough/currentop_active_cursor.js

      Show
      buildscripts/resmoke.py --suites=no_passthrough --mongodSetParameters='{featureFlagSBE: true}' jstests/noPassthrough/currentop_active_cursor.js
    • Query Optimization 2021-03-22
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      A segfault happens on the following line.

      Backtrace:
      [js_test:currentop_active_cursor] d20020| {"t":{"$date":"2021-03-09T16:55:07.825+00:00"},"s":"I",  "c":"CONTROL",  "id":31445,   "ctx":"conn2","msg":"Frame","attr":{"frame":{"a":"5636BD9FF647","b":"5636B8B4F000","o":"4EB0647","s":"_ZN5mongo15printStackTraceEv","s+":"27"}}}
      [js_test:currentop_active_cursor] d20020| {"t":{"$date":"2021-03-09T16:55:07.825+00:00"},"s":"I",  "c":"CONTROL",  "id":31445,   "ctx":"conn2","msg":"Frame","attr":{"frame":{"a":"5636BD9FAD3B","b":"5636B8B4F000","o":"4EABD3B","s":"abruptQuitWithAddrSignal","s+":"17B"}}}
      [js_test:currentop_active_cursor] d20020| {"t":{"$date":"2021-03-09T16:55:07.825+00:00"},"s":"I",  "c":"CONTROL",  "id":31445,   "ctx":"conn2","msg":"Frame","attr":{"frame":{"a":"7F7E5CD60040","b":"7F7E5CD21000","o":"3F040","s":"killpg","s+":"40"}}}
      [js_test:currentop_active_cursor] d20020| {"t":{"$date":"2021-03-09T16:55:07.825+00:00"},"s":"I",  "c":"CONTROL",  "id":31445,   "ctx":"conn2","msg":"Frame","attr":{"frame":{"a":"5636BC261419","b":"5636B8B4F000","o":"3712419","s":"_ZN5mongo15PlanYieldPolicy12performYieldEPNS_16OperationContextEPKNS_9YieldableESt8functionIFvvEE","s+":"59"}}}
      [js_test:currentop_active_cursor] d20020| {"t":{"$date":"2021-03-09T16:55:07.825+00:00"},"s":"I",  "c":"CONTROL",  "id":31445,   "ctx":"conn2","msg":"Frame","attr":{"frame":{"a":"5636BC2611EC","b":"5636B8B4F000","o":"37121EC","s":"_ZN5mongo15PlanYieldPolicy16yieldOrInterruptEPNS_16OperationContextESt8functionIFvvEE","s+":"11C"}}}
      [js_test:currentop_active_cursor] d20020| {"t":{"$date":"2021-03-09T16:55:07.825+00:00"},"s":"I",  "c":"CONTROL",  "id":31445,   "ctx":"conn2","msg":"Frame","attr":{"frame":{"a":"5636BC1D7FBA","b":"5636B8B4F000","o":"3688FBA","s":"_ZN5mongo3sbe12CanInterrupt17checkForInterruptEPNS_16OperationContextE","s+":"5A"}}}
      [js_test:currentop_active_cursor] d20020| {"t":{"$date":"2021-03-09T16:55:07.825+00:00"},"s":"I",  "c":"CONTROL",  "id":31445,   "ctx":"conn2","msg":"Frame","attr":{"frame":{"a":"5636BC1DBE58","b":"5636B8B4F000","o":"368CE58","s":"_ZN5mongo3sbe9ScanStage7getNextEv","s+":"A8"}}}
      [js_test:currentop_active_cursor] d20020| {"t":{"$date":"2021-03-09T16:55:07.825+00:00"},"s":"I",  "c":"CONTROL",  "id":31445,   "ctx":"conn2","msg":"Frame","attr":{"frame":{"a":"5636BC00CFA3","b":"5636B8B4F000","o":"34BDFA3","s":"_ZN5mongo9fetchNextEPNS_3sbe9PlanStageEPNS0_5value12SlotAccessorES5_PNS_7BSONObjEPNS_8RecordIdEb","s+":"43"}}}
      [js_test:currentop_active_cursor] d20020| {"t":{"$date":"2021-03-09T16:55:07.825+00:00"},"s":"I",  "c":"CONTROL",  "id":31445,   "ctx":"conn2","msg":"Frame","attr":{"frame":{"a":"5636BC00CC37","b":"5636B8B4F000","o":"34BDC37","s":"_ZN5mongo15PlanExecutorSBE7getNextEPNS_7BSONObjEPNS_8RecordIdE","s+":"337"}}}
      [js_test:currentop_active_cursor] d20020| {"t":{"$date":"2021-03-09T16:55:07.825+00:00"},"s":"I",  "c":"CONTROL",  "id":31445,   "ctx":"conn2","msg":"Frame","attr":{"frame":{"a":"5636BBAB8384","b":"5636B8B4F000","o":"2F69384","s":"_ZN5mongo12_GLOBAL__N_110GetMoreCmd10Invocation28acquireLocksAndIterateCursorEPNS_16OperationContextEPNS_3rpc21ReplyBuilderInterfaceEPNS_13CursorManagerERNS_15ClientCursorPinEPNS_5CurOpE","s+":"1B84"}}}
      [js_test:currentop_active_cursor] d20020| {"t":{"$date":"2021-03-09T16:55:07.825+00:00"},"s":"I",  "c":"CONTROL",  "id":31445,   "ctx":"conn2","msg":"Frame","attr":{"frame":{"a":"5636BBAB5F79","b":"5636B8B4F000","o":"2F66F79","s":"_ZN5mongo12_GLOBAL__N_110GetMoreCmd10Invocation3runEPNS_16OperationContextEPNS_3rpc21ReplyBuilderInterfaceE","s+":"309"}}}
      [js_test:currentop_active_cursor] d20020| {"t":{"$date":"2021-03-09T16:55:07.825+00:00"},"s":"I",  "c":"CONTROL",  "id":31445,   "ctx":"conn2","msg":"Frame","attr":{"frame":{"a":"5636BC662BB0","b":"5636B8B4F000","o":"3B13BB0","s":"_ZN5mongo14CommandHelpers20runCommandInvocationEPNS_16OperationContextERKNS_12OpMsgRequestEPNS_17CommandInvocationEPNS_3rpc21ReplyBuilderInterfaceE","s+":"80"}}}
      [js_test:currentop_active_cursor] d20020| {"t":{"$date":"2021-03-09T16:55:07.825+00:00"},"s":"I",  "c":"CONTROL",  "id":31445,   "ctx":"conn2","msg":"Frame","attr":{"frame":{"a":"5636BC6614A8","b":"5636B8B4F000","o":"3B124A8","s":"_ZN5mongo14CommandHelpers20runCommandInvocationESt10shared_ptrINS_23RequestExecutionContextEES1_INS_17CommandInvocationEENS_9transport15ServiceExecutor14ThreadingModelE","s+":"1F8"}}}
      [js_test:currentop_active_cursor] d20020| {"t":{"$date":"2021-03-09T16:55:07.825+00:00"},"s":"I",  "c":"CONTROL",  "id":31445,   "ctx":"conn2","msg":"Frame","attr":{"frame":{"a":"5636BB100504","b":"5636B8B4F000","o":"25B1504","s":"_ZN5mongo12_GLOBAL__N_120runCommandInvocationESt10shared_ptrINS_23RequestExecutionContextEES1_INS_17CommandInvocationEE","s+":"174"}}}
      [js_test:currentop_active_cursor] d20020| {"t":{"$date":"2021-03-09T16:55:07.825+00:00"},"s":"I",  "c":"CONTROL",  "id":31445,   "ctx":"conn2","msg":"Frame","attr":{"frame":{"a":"5636BB0FC5C3","b":"5636B8B4F000","o":"25AD5C3","s":"_ZN5mongo12_GLOBAL__N_114RunCommandImpl11_runCommandEv","s+":"353"}}}
      [js_test:currentop_active_cursor] d20020| {"t":{"$date":"2021-03-09T16:55:07.825+00:00"},"s":"I",  "c":"CONTROL",  "id":31445,   "ctx":"conn2","msg":"Frame","attr":{"frame":{"a":"5636BB0FAEF2","b":"5636B8B4F000","o":"25ABEF2","s":"_ZN5mongo12_GLOBAL__N_132RunCommandAndWaitForWriteConcern8_runImplEv","s+":"5C2"}}}
      [js_test:currentop_active_cursor] d20020| {"t":{"$date":"2021-03-09T16:55:07.825+00:00"},"s":"I",  "c":"CONTROL",  "id":31445,   "ctx":"conn2","msg":"Frame","attr":{"frame":{"a":"5636BB104310","b":"5636B8B4F000","o":"25B5310","s":"_ZN5mongo12_GLOBAL__N_114RunCommandImpl3runEv","s+":"220"}}}
      [js_test:currentop_active_cursor] d20020| {"t":{"$date":"2021-03-09T16:55:07.825+00:00"},"s":"I",  "c":"CONTROL",  "id":31445,   "ctx":"conn2","msg":"Frame","attr":{"frame":{"a":"5636BB0F722C","b":"5636B8B4F000","o":"25A822C","s":"_ZN5mongo12_GLOBAL__N_119ExecCommandDatabase12_commandExecEv","s+":"43C"}}}
      
      

            Assignee:
            Martin Neupauer (Inactive)
            Reporter:
            Mihai Andrei
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: