SERVER-55085 [SBE] Segmentation fault in jstests/noPassthrough/currentop_active_cursor.js

readLock may be null so we have to deal with it.