jstests/noPassthrough/currentop_active_cursor.js
@@ -2,7 +2,6 @@
 // Then test and make sure a pinned cursor shows up in the operation object.
 // @tags: [
 //   requires_sharding,
-//   sbe_incompatible,
 // ]
 (function() {
 "use strict";
